re-run to get some info
nth happened

--- a/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/random_forest-sa-20000_baseline.ipynb
+++ b/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/random_forest-sa-20000_baseline.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -84,50 +84,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_67963_row0_col0, #T_67963_row0_col1, #T_67963_row1_col1 {\n",
+       "#T_4a54d_row0_col0, #T_4a54d_row0_col1, #T_4a54d_row1_col1 {\n",
        "  background-color: #fcfbfd;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_67963_row1_col0 {\n",
+       "#T_4a54d_row1_col0 {\n",
        "  background-color: #3f007d;\n",
        "  color: #f1f1f1;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_67963\">\n",
+       "<table id=\"T_4a54d\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_67963_level0_col0\" class=\"col_heading level0 col0\" >review_score</th>\n",
-       "      <th id=\"T_67963_level0_col1\" class=\"col_heading level0 col1\" >review_text</th>\n",
+       "      <th id=\"T_4a54d_level0_col0\" class=\"col_heading level0 col0\" >review_score</th>\n",
+       "      <th id=\"T_4a54d_level0_col1\" class=\"col_heading level0 col1\" >review_text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_67963_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_67963_row0_col0\" class=\"data row0 col0\" >0</td>\n",
-       "      <td id=\"T_67963_row0_col1\" class=\"data row0 col1\" >150672</td>\n",
+       "      <th id=\"T_4a54d_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_4a54d_row0_col0\" class=\"data row0 col0\" >0</td>\n",
+       "      <td id=\"T_4a54d_row0_col1\" class=\"data row0 col1\" >150672</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_67963_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_67963_row1_col0\" class=\"data row1 col0\" >1</td>\n",
-       "      <td id=\"T_67963_row1_col1\" class=\"data row1 col1\" >150672</td>\n",
+       "      <th id=\"T_4a54d_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_4a54d_row1_col0\" class=\"data row1 col0\" >1</td>\n",
+       "      <td id=\"T_4a54d_row1_col1\" class=\"data row1 col1\" >150672</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f2f72602880>"
+       "<pandas.io.formats.style.Styler at 0x177ecdca0>"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,50 +168,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_204cd_row0_col0, #T_204cd_row0_col1 {\n",
+       "#T_0e002_row0_col0, #T_0e002_row0_col1 {\n",
        "  background-color: #fcfbfd;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_204cd_row1_col0, #T_204cd_row1_col1 {\n",
+       "#T_0e002_row1_col0, #T_0e002_row1_col1 {\n",
        "  background-color: #3f007d;\n",
        "  color: #f1f1f1;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_204cd\">\n",
+       "<table id=\"T_0e002\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_204cd_level0_col0\" class=\"col_heading level0 col0\" >review_score</th>\n",
-       "      <th id=\"T_204cd_level0_col1\" class=\"col_heading level0 col1\" >review_text</th>\n",
+       "      <th id=\"T_0e002_level0_col0\" class=\"col_heading level0 col0\" >review_score</th>\n",
+       "      <th id=\"T_0e002_level0_col1\" class=\"col_heading level0 col1\" >review_text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_204cd_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_204cd_row0_col0\" class=\"data row0 col0\" >0</td>\n",
-       "      <td id=\"T_204cd_row0_col1\" class=\"data row0 col1\" >150928</td>\n",
+       "      <th id=\"T_0e002_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_0e002_row0_col0\" class=\"data row0 col0\" >0</td>\n",
+       "      <td id=\"T_0e002_row0_col1\" class=\"data row0 col1\" >150928</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_204cd_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_204cd_row1_col0\" class=\"data row1 col0\" >1</td>\n",
-       "      <td id=\"T_204cd_row1_col1\" class=\"data row1 col1\" >774377</td>\n",
+       "      <th id=\"T_0e002_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_0e002_row1_col0\" class=\"data row1 col0\" >1</td>\n",
+       "      <td id=\"T_0e002_row1_col1\" class=\"data row1 col1\" >774377</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f2fbc4118e0>"
+       "<pandas.io.formats.style.Styler at 0x2c259cca0>"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +230,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 120000 entries, 3794742 to 3855230\n",
+      "Index: 120000 entries, 3758070 to 3855230\n",
       "Data columns (total 7 columns):\n",
       " #   Column        Non-Null Count   Dtype \n",
       "---  ------        --------------   ----- \n",
@@ -250,50 +252,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_42757_row0_col0, #T_42757_row0_col1 {\n",
+       "#T_463bb_row0_col0, #T_463bb_row0_col1, #T_463bb_row1_col1 {\n",
        "  background-color: #fcfbfd;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_42757_row1_col0, #T_42757_row1_col1 {\n",
+       "#T_463bb_row1_col0 {\n",
        "  background-color: #3f007d;\n",
        "  color: #f1f1f1;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_42757\">\n",
+       "<table id=\"T_463bb\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_42757_level0_col0\" class=\"col_heading level0 col0\" >review_score</th>\n",
-       "      <th id=\"T_42757_level0_col1\" class=\"col_heading level0 col1\" >review_text</th>\n",
+       "      <th id=\"T_463bb_level0_col0\" class=\"col_heading level0 col0\" >review_score</th>\n",
+       "      <th id=\"T_463bb_level0_col1\" class=\"col_heading level0 col1\" >review_text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_42757_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_42757_row0_col0\" class=\"data row0 col0\" >0</td>\n",
-       "      <td id=\"T_42757_row0_col1\" class=\"data row0 col1\" >20000</td>\n",
+       "      <th id=\"T_463bb_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_463bb_row0_col0\" class=\"data row0 col0\" >0</td>\n",
+       "      <td id=\"T_463bb_row0_col1\" class=\"data row0 col1\" >60000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_42757_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_42757_row1_col0\" class=\"data row1 col0\" >1</td>\n",
-       "      <td id=\"T_42757_row1_col1\" class=\"data row1 col1\" >100000</td>\n",
+       "      <th id=\"T_463bb_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_463bb_row1_col0\" class=\"data row1 col0\" >1</td>\n",
+       "      <td id=\"T_463bb_row1_col1\" class=\"data row1 col1\" >60000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f2f1d15af10>"
+       "<pandas.io.formats.style.Styler at 0x177ecddc0>"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -310,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -428,14 +431,14 @@
       "\n",
       "Training set\n",
       "review_score\n",
-      "1    89949\n",
-      "0    18051\n",
+      "0    54060\n",
+      "1    53940\n",
       "Name: count, dtype: int64\n",
       "\n",
       "Test set\n",
       "review_score\n",
-      "1    10051\n",
-      "0     1949\n",
+      "1    6060\n",
+      "0    5940\n",
       "Name: count, dtype: int64\n",
       "\n",
       "Validation (imbalanced) set\n",
@@ -537,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -551,12 +554,12 @@
       "\n",
       "\n",
       "training set\n",
-      "Counter({1: 89949, 0: 18051})\n",
-      "pos / neg ratio = 4.983048030580023\n",
+      "Counter({0: 54060, 1: 53940})\n",
+      "pos / neg ratio = 0.9977802441731409\n",
       "\n",
       "testing set\n",
-      "Counter({1: 10051, 0: 1949})\n",
-      "pos / neg ratio = 5.157003591585428\n"
+      "Counter({1: 6060, 0: 5940})\n",
+      "pos / neg ratio = 1.02020202020202\n"
      ]
     }
    ],
@@ -601,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,29 +720,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of discrete words: 230401\n",
+      "Total number of discrete words: 64247\n",
       "\n",
-      "Number of words with count >= 5000: 1018\n",
-      "Number of words with count >= 1000: 2770\n",
-      "Number of words with count >= 500: 4029\n",
-      "Number of words with count >= 100: 8957\n",
-      "Number of words with count >= 50: 12634\n",
-      "Number of words with count >= 25: 17841\n",
-      "Number of words with count >= 10: 28812\n"
+      "Number of words with count >= 5000: 126\n",
+      "Number of words with count >= 1000: 737\n",
+      "Number of words with count >= 500: 1231\n",
+      "Number of words with count >= 100: 3226\n",
+      "Number of words with count >= 50: 4608\n",
+      "Number of words with count >= 25: 6486\n",
+      "Number of words with count >= 10: 10474\n",
+      "Number of words with count >= 5: 15300\n",
+      "Number of words with count >= 3: 20893\n",
+      "Number of words with count >= 2: 28106\n"
      ]
     }
    ],
    "source": [
     "print(\"Total number of discrete words:\", len(words_counter.items()))\n",
     "print()\n",
-    "for n in [5000, 1000, 500, 100, 50, 25, 10]:\n",
+    "for n in [5000, 1000, 500, 100, 50, 25, 10, 5, 3, 2]:\n",
     "    print(\"Number of words with count >= {}: {}\".format(n, len(Counter({k:c for k,c in words_counter.items() if c >= n}))))\n",
     "\n",
     "# len(Counter({k:c for k,c in words_counter.items() if c >= 100}))"
@@ -747,28 +753,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    2.304010e+05\n",
-       "mean     1.323739e+02\n",
-       "std      4.312325e+03\n",
-       "min      1.000000e+00\n",
-       "1%       1.000000e+00\n",
-       "10%      1.000000e+00\n",
-       "25%      1.000000e+00\n",
-       "50%      1.000000e+00\n",
-       "75%      3.000000e+00\n",
-       "90%      1.500000e+01\n",
-       "99%      1.375000e+03\n",
-       "max      1.651285e+06\n",
+       "count     64247.000000\n",
+       "mean         61.813641\n",
+       "std        1034.615342\n",
+       "min           1.000000\n",
+       "1%            1.000000\n",
+       "10%           1.000000\n",
+       "25%           1.000000\n",
+       "50%           1.000000\n",
+       "75%           4.000000\n",
+       "90%          25.000000\n",
+       "99%        1180.540000\n",
+       "max      209622.000000\n",
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,17 +811,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(918000, 5000)\n",
+      "(108000, 20000)\n",
       "\n",
       "\n",
-      "['aa' 'aaa' 'abandon' ... 'zombi' 'zone' 'zoom']\n"
+      "['aa' 'aaa' 'aaaaand' ... 'zur' 'zx' 'zzz']\n",
+      "\n",
+      "\n",
+      "[0 0 0 ... 0 0 0]\n"
      ]
     }
    ],
@@ -823,7 +832,10 @@
     "print(X_train_subset_vectorized.shape)\n",
     "print()\n",
     "print()\n",
-    "print(vect.get_feature_names_out())"
+    "print(vect.get_feature_names_out())\n",
+    "print()\n",
+    "print()\n",
+    "print(X_train_subset_vectorized.toarray()[0])"
    ]
   },
   {
