Converted models to ONNX
Update the script

--- a/NLP/dev-workspace/sa/bert_2023-12-13/convert_to_onnx.ipynb
+++ b/NLP/dev-workspace/sa/bert_2023-12-13/convert_to_onnx.ipynb
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_SIZE = 120\n",
-    "DATASET_IS_BALANCED = True\n",
+    "DATASET_SIZE = 480\n",
+    "DATASET_IS_BALANCED = False\n",
     "\n",
     "training_name = 'bert-finetune_{}k_{}'.format(\n",
     "    DATASET_SIZE,\n",
     "    'bal' if DATASET_IS_BALANCED else 'imbal'\n",
     ")\n",
     "\n",
-    "training_args_datetime = datetime(year=2023, month=12, day=17)\n",
+    "training_args_datetime = datetime(year=2023, month=12, day=20)          # change the date to the date of training\n",
     "training_storing_folder = Path(training_name).resolve()\n",
     "\n",
     "model_path = Path.joinpath(\n",
@@ -37,16 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'bert-finetune_120k_bal_2023-12-17_model'"
+       "'bert-finetune_480k_imbal_2023-12-20_model'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -67,9 +67,16 @@
       "Framework not specified. Using pt to export to ONNX.\n",
       "Using the export variant default. Available variants are:\n",
       "    - default: The default ONNX variant.\n",
-      "Using framework PyTorch: 2.1.0\n",
+      "Using framework PyTorch: 2.1.0+cu121\n",
       "Overriding 1 configuration item(s)\n",
       "\t- use_cache -> False\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving model to /root/FYP/NLP/dev-workspace/sa/bert_2023-12-13/bert-finetune_480k_imbal/bert-finetune_480k_imbal_2023-12-20_model_onnx\n"
      ]
     }
    ],
@@ -90,33 +97,62 @@
     "if not save_directory.exists():\n",
     "    save_directory.mkdir(parents=True)\n",
     "\n",
+    "print('Saving model to {}'.format(save_directory))\n",
+    "\n",
     "tokenizer.save_pretrained(save_directory)\n",
     "ort_model.save_pretrained(save_directory)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Optimizing model...\n",
+      "Configuration saved in /root/FYP/NLP/dev-workspace/sa/bert_2023-12-13/bert-finetune_480k_imbal/bert-finetune_480k_imbal_2023-12-20_model_onnx/ort_config.json\n",
+      "Optimized model saved at: /root/FYP/NLP/dev-workspace/sa/bert_2023-12-13/bert-finetune_480k_imbal/bert-finetune_480k_imbal_2023-12-20_model_onnx (external data format: False; saved all tensor to one file: True)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "PosixPath('/Users/michaelcheng/Documents/MyDocs/HKU/COMP4801 FYP/FYP/NLP/dev-workspace/sa/bert_2023-12-13/bert-finetune_120k_bal/onnx')"
+       "PosixPath('/root/FYP/NLP/dev-workspace/sa/bert_2023-12-13/bert-finetune_480k_imbal/bert-finetune_480k_imbal_2023-12-20_model_onnx')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "save_directory"
+    "from optimum.onnxruntime import ORTOptimizer\n",
+    "from optimum.onnxruntime.configuration import OptimizationConfig\n",
+    "\n",
+    "# ref: https://huggingface.co/docs/optimum/onnxruntime/usage_guides/optimization\n",
+    "\n",
+    "optimizer = ORTOptimizer.from_pretrained(ort_model)\n",
+    "optimization_config = OptimizationConfig(\\\n",
+    "    optimization_level=2,\n",
+    "    enable_transformers_specific_optimizations=True,\n",
+    "    optimize_for_gpu=False) \n",
+    "\n",
+    "optimizer.optimize(\n",
+    "    save_dir=save_directory,\n",
+    "    optimization_config=optimization_config\n",
+    ")\n",
+    "\n",
+    "# it will create two files:\n",
+    "# model_optimized.onnx\n",
+    "# ort_config.json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,10 +161,10 @@
     "from transformers import AutoTokenizer\n",
     "from onnxruntime import InferenceSession\n",
     "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-cased\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(save_directory)\n",
     "session = InferenceSession(Path.joinpath(\n",
     "    save_directory,\n",
-    "    \"model.onnx\")\n",
+    "    \"model_optimized.onnx\")\n",
     ")\n",
     "\n",
     "input_names = [label.name for label in session.get_inputs()]\n",
@@ -141,17 +177,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "input_ids\n",
-      "attention_mask\n",
-      "token_type_ids\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['input_ids', 'attention_mask', 'token_type_ids']"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -160,16 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'logits'"
+       "['logits']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,15 +241,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([[-2.1389656,  1.6192293]], dtype=float32), array([[ 1.5018184, -1.5831153]], dtype=float32), array([[ 1.1016914, -1.3381388]], dtype=float32)]\n",
-      "[array([[-2.1389651,  1.6192296]], dtype=float32), array([[ 1.5018172, -1.5831144]], dtype=float32), array([[ 1.1016904, -1.3381379]], dtype=float32)]\n"
+      "[array([[-3.1710236,  3.2229025]], dtype=float32), array([[ 1.2209499 , -0.87591463]], dtype=float32), array([[ 0.76088977, -0.63426894]], dtype=float32)]\n",
+      "[array([[-3.1710243,  3.2229028]], dtype=float32), array([[ 1.22095  , -0.8759148]], dtype=float32), array([[ 0.76088965, -0.6342685 ]], dtype=float32)]\n"
      ]
     }
    ],
