--- a/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/convert_to_onnx.ipynb
+++ b/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/convert_to_onnx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Training storing folder:\n",
-      "/Users/michaelcheng/Documents/MyDocs/HKU/COMP4801 FYP/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_120k_imbal\n",
+      "/root/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_480k_imbal\n",
       "\n",
       "\n",
       "\n"
@@ -30,7 +30,7 @@
     "from skl2onnx import convert_sklearn, to_onnx\n",
     "from skl2onnx.common.data_types import StringTensorType\n",
     "\n",
-    "DATASET_SIZE = 120\n",
+    "DATASET_SIZE = 480\n",
     "DATASET_IS_BALANCED = False\n",
     "\n",
     "\n",
@@ -55,16 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded model from /Users/michaelcheng/Documents/MyDocs/HKU/COMP4801 FYP/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_120k_imbal/tfidf-rf-20000_120k_imbal_2023-12-20_model.sav\n",
-      "Loaded count vectorizer from /Users/michaelcheng/Documents/MyDocs/HKU/COMP4801 FYP/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_120k_imbal/tfidf-rf-20000_120k_imbal_2023-12-20_count_vectorizer.pkl\n",
-      "Loaded tfidf transformer from /Users/michaelcheng/Documents/MyDocs/HKU/COMP4801 FYP/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_120k_imbal/tfidf-rf-20000_120k_imbal_2023-12-20_tfidf.pkl\n"
+      "Loaded model from /root/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_480k_imbal/tfidf-rf-20000_480k_imbal_2023-12-20_model.sav\n",
+      "Loaded count vectorizer from /root/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_480k_imbal/tfidf-rf-20000_480k_imbal_2023-12-20_count_vectorizer.pkl\n",
+      "Loaded tfidf transformer from /root/FYP/NLP/dev-workspace/sa/tfidf-rf_2023-12-16/tfidf-rf-20000_480k_imbal/tfidf-rf-20000_480k_imbal_2023-12-20_tfidf.pkl\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
     "    pipeline_inference,\n",
     "    initial_types=[('strfeat', StringTensorType([None, 1]))],\n",
     "    options=onnx_options,\n",
-    "    target_opset=13     # supports version 1.13 or above (current ver is 1.16)\n",
+    "    target_opset=15     # same as that in tf2onnx\n",
     ")\n",
     "\n",
     "model_onnx_path = Path.joinpath(training_storing_folder, \"{}_{}_pipeline.onnx\".format(\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,11 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "import onnxruntime as rt\n",
+    "\n",
+    "# install necessary locale on linux or wsl: https://github.com/microsoft/onnxruntime/issues/13197\n",
     "\n",
     "sess = rt.InferenceSession(\n",
     "    Path.joinpath(training_storing_folder, \"{}_{}_pipeline.onnx\".format(\n",
@@ -161,15 +163,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([[0., 1.]]), array([[0.18988889, 0.81011111]]), array([[0.0612605, 0.9387395]])]\n",
-      "[[array([1], dtype=int64), array([[-1.1920929e-07,  1.0000001e+00]], dtype=float32)], [array([1], dtype=int64), array([[0.18988895, 0.81011105]], dtype=float32)], [array([1], dtype=int64), array([[0.0612604, 0.9387396]], dtype=float32)]]\n"
+      "[array([[0.03806955, 0.96193045]]), array([[0.08481341, 0.91518659]]), array([[0.0825, 0.9175]])]\n",
+      "[[array([1], dtype=int64), array([[0.03806955, 0.96193045]], dtype=float32)], [array([1], dtype=int64), array([[0.08481354, 0.91518646]], dtype=float32)], [array([1], dtype=int64), array([[0.08249998, 0.9175    ]], dtype=float32)]]\n"
      ]
     },
     {
@@ -201,13 +203,6 @@
     "    # test whether the results are the same\n",
     "    np.testing.assert_allclose(result_sklearn, result_onnx, rtol=1e-5, atol=1e-5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
