Add comments on dataset creation script

--- a/NLP/dev-workspace/dataset/sa/dataset_creation.ipynb
+++ b/NLP/dev-workspace/dataset/sa/dataset_creation.ipynb
@@ -155,6 +155,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create both balanced and imbalanced validation dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
