State default args explicitly
State default args of Adam optimizer explicitly in training script (shd have no impact to the training functions and result, as they match with previous studies).

No re-training is required.

--- a/NLP/dev-workspace/sa/glove-cnn_2023-12-12/glove_cnn_training_script.ipynb
+++ b/NLP/dev-workspace/sa/glove-cnn_2023-12-12/glove_cnn_training_script.ipynb
@@ -874,7 +874,9 @@
     "LEARNING_RATE = 1e-3\n",
     "\n",
     "model.compile(\n",
-    "    loss=\"sparse_categorical_crossentropy\", optimizer=tf.keras.optimizers.Adam(learning_rate=LEARNING_RATE), metrics=metrics\n",
+    "    loss=\"sparse_categorical_crossentropy\", \n",
+    "    optimizer=tf.keras.optimizers.Adam(learning_rate=LEARNING_RATE, beta_1=0.9, beta_2=0.999),      # state the default setting of beta_1 and beta_2 explicitly\n",
+    "    metrics=metrics\n",
     ")\n",
     "\n",
     "# reduce learning rate when loss is not decreasing\n",
