WIP topic modeling demo notebooks
More metrics were implemented (mainly in BERTopic script for testintg)

--- a/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo.ipynb
+++ b/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo.ipynb
@@ -706,6 +706,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "save model\n",
+    "\n",
+    "we need to save the corpora.Dictionary and the LDA model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the LDA multicore model (and the corpora.Dictionary object) automatically\n",
+    "lda_model.save('lda_model')     # no need to add file extension"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "load model (both corpora Dictionary and the LDA model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id2word_load = gensim.corpora.Dictionary.load('lda_model.id2word')\n",
+    "\n",
+    "lda_model_load = gensim.models.ldamulticore.LdaMulticore.load('lda_model')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Evaluation\n",
     "\n",
     "gensim provide functions to calculate, so we don't need to install octis (as the evaluation backend of octis also relies on gensim)\n",
@@ -997,65 +1034,15 @@
     "# we first analysze NPMI\n",
     "\n",
     "npmi = Coherence(texts=X_lemmatized, topk=10, measure='c_npmi')\n",
-    "nmpi_score = npmi.score(result_lda_online)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nmpi_score' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[46], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mnmpi_score\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'nmpi_score' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "nmpi_score"
+    "npmi_score = npmi.score(result_lda_online)\n",
+    "npmi_score"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "save model\n",
-    "\n",
-    "we need to save the corpora.Dictionary and the LDA model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save the LDA multicore model (and the corpora.Dictionary object) automatically\n",
-    "lda_model.save('lda_model')     # no need to add file extension"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "load model (both corpora Dictionary and the LDA model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "id2word_load = gensim.corpora.Dictionary.load('lda_model.id2word')\n",
-    "\n",
-    "lda_model_load = gensim.models.ldamulticore.LdaMulticore.load('lda_model')"
+    "INFERENCE"
    ]
   },
   {
