SA mew training procedures and datasets
Discover that huge duplicates between the pair (review_text, review_score) due to duplicate comments in original dataset. Hence update in dataset creation is made to remove duplicates as much as we can, and ensure no information leakage is made to validation datasets.

Update in data cleaning, to reduce the messy (& duplicate) removal functions. Add two new functions to remove hyperlinks (taken from Stack Overflow). Also include those new functions to data-cleaning before training.

Improve bert-finetuning script and tfidf-rf training script to accept arguments, and thus creating two bash scripts to run their training process.

--- a/NLP/dev-workspace/sa/glove-cnn_2023-12-12/glove_cnn_training_script.ipynb
+++ b/NLP/dev-workspace/sa/glove-cnn_2023-12-12/glove_cnn_training_script.ipynb
@@ -61,6 +61,8 @@
     "\n",
     "training_date = datetime.today()\n",
     "\n",
+    "training_name = f'{training_name}_{training_date.strftime(\"%Y-%m-%d\")}'\n",
+    "\n",
     "training_output_folder = Path(f'{training_name}/').resolve()\n",
     "\n",
     "if not training_output_folder.exists():\n",
@@ -167,13 +169,13 @@
     "# define your own cleaning function\n",
     "\n",
     "def cleaning_arr(str_arr):\n",
+    "    str_arr = str_arr.apply(lambda x: str_cleaning_functions.remove_links(x))\n",
+    "    str_arr = str_arr.apply(lambda x: str_cleaning_functions.remove_links2(x))\n",
     "    str_arr = str_arr.apply(lambda x: str_cleaning_functions.clean(x))\n",
     "    str_arr = str_arr.apply(lambda x: str_cleaning_functions.deEmojify(x))\n",
+    "    str_arr = str_arr.apply(lambda x: str_cleaning_functions.remove_non_letters(x))\n",
     "    str_arr = str_arr.apply(lambda x: x.lower())\n",
-    "    str_arr = str_arr.apply(lambda x: str_cleaning_functions.remove_num(x))\n",
-    "    str_arr = str_arr.apply(lambda x: str_cleaning_functions.remove_symbols(x))\n",
-    "    str_arr = str_arr.apply(lambda x: str_cleaning_functions.remove_punctuation(x))\n",
-    "    # str_arr = str_arr.apply(lambda x: str_cleaning_functions.remove_stopword(x))      # no need to remove stopwords, as previous study shown including stopwords can improve performance (https://aclanthology.org/P12-1092.pdf)\n",
+    "    # str_arr = str_arr.apply(lambda x: str_cleaning_functions.remove_stopword(x))      # no need to remove stopwords, as glove is trained with stopwords\n",
     "    str_arr = str_arr.apply(lambda x: str_cleaning_functions.unify_whitespaces(x))\n",
     "    # str_arr = str_arr.apply(lambda x: str_cleaning_functions.stemming(x))\n",
     "\n",
@@ -1029,9 +1031,8 @@
    "source": [
     "# save text vectorizer\n",
     "\n",
-    "with open(Path.joinpath(training_output_folder, \"{}_{}_textvectorizer.pkl\".format(\n",
-    "                training_name,\n",
-    "                training_date.strftime(\"%Y-%m-%d\"))\n",
+    "with open(Path.joinpath(training_output_folder, \"{}_textvectorizer.pkl\".format(\n",
+    "                training_name)\n",
     "            ), 'wb') as f:\n",
     "    \n",
     "\n",
@@ -1090,9 +1091,8 @@
     "\n",
     "model.save(Path.joinpath(\n",
     "    training_output_folder,\n",
-    "    '{}_{}_model.keras'.format(\n",
-    "        training_name,\n",
-    "        training_date.strftime(\"%Y-%m-%d\"))\n",
+    "    '{}_model.keras'.format(\n",
+    "        training_name)\n",
     "    ))"
    ]
   },
@@ -1107,9 +1107,7 @@
     "# model_loaded = keras.models.load_model(Path.joinpath(\n",
     "#     training_output_folder,\n",
     "#     '{}_{}_model.keras'.format(\n",
-    "#         training_name,\n",
-    "#         training_date.strftime(\"%Y-%m-%d\")\n",
-    "#     )\n",
+    "#         training_name)\n",
     "# ))"
    ]
   },
@@ -1156,9 +1154,8 @@
    "source": [
     "end_to_end_model.save(Path.joinpath(\n",
     "    training_output_folder,\n",
-    "    '{}_{}_end2end.keras'.format(\n",
-    "        training_name,\n",
-    "        training_date.strftime(\"%Y-%m-%d\"))\n",
+    "    '{}_end2end.keras'.format(\n",
+    "        training_name)\n",
     "))"
    ]
   },
